[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "ballast"
version = "0.1.0"
description = "Durable backend correctness for single-machine Python on one SQLite file: transactional outbox, exactly-once jobs, forward-only migrations, snapshots. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The ballast authors" }]
keywords = [
    "sqlite",
    "durable-execution",
    "outbox",
    "jobs",
    "job-queue",
    "task-queue",
    "exactly-once",
    "migrations",
    "event-sourcing",
    "offline-first",
    "local-first",
    "desktop",
    "embedded",
    "no-broker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
keyring = ["keyring>=25.7.0"]
dev = ["pytest>=9.1.1", "ruff>=0.15.20", "mypy>=2.1.0"]

[project.urls]
Homepage = "https://github.com/Vibecoder012/ballast"
Repository = "https://github.com/Vibecoder012/ballast"
Issues = "https://github.com/Vibecoder012/ballast/issues"
Changelog = "https://github.com/Vibecoder012/ballast/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ballast"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PT011", "PT012"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["keyring"]
ignore_missing_imports = true
